NavBar for userPanel.html and home.html, Not showing name in userPanel.html fixed

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -33,5 +33,26 @@ Pascal
 	background-color: #d21dff;
 
 }
+.topnav {
+	overflow: hidden;
+	background-color: #efefef
+}
 
+.topnav a {
+	float: left;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a.active {
+	background-color: #337ab7;
+	color: white;
+}
 
